--- a/.env.heirloom
+++ b/.env.heirloom
@@ -1,3 +1,6 @@
+# last modified 2014-10-22
+# source only if using Heirloom troff and friends
+
 export PATH=.:$HOME/heirloom/ucb:$PATH
 
 export MANPATH=$HOME/heirloom/share/man:$MANPATH
