--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2014-09-15
+# last change 2014-11-02
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -20,7 +20,8 @@ export GROFF_ENCODING=utf8
 export GROFF_TMAC_PATH=$HOME:
 
 export GROFF_FONT_FAM=baskervald
-export GROFF_FONT_BOLD=chunkfive
+#export GROFF_FONT_BOLD=chunkfive
+export GROFF_FONT_BOLD=ubuntuB
 export GROFF_FONT_MONO=ubuntumonoR
 
 #export GROFF_PREFIX=/usr/local
@@ -30,10 +31,6 @@ export GROFF_FONT_MONO=ubuntumonoR
 #heirloom
 
 #export PATH=/usr/local/ucb:$PATH
-
-export TROFFONTS=~/troffonts
-
-export TROFFMACS=~/troffmacs/
 
 export CCL_DEFAULT_DIRECTORY=$HOME/src/linuxx86/ccl
 
