--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2014-11-02
+# last change 2014-11-03
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -45,5 +45,7 @@ export CALCPATH=~/calc:
 export ERL_LIBS=~/public_html/erllib
 
 #export CLASSPATH=~/src/clojure-1.5.0/clojure-1.5.0.jar
+
+export LYNX_LSS=~/.lynx.lss
 
 export NODE_PATH=/usr/local/lib/node_modules
