--- a/.env.heirloom
+++ b/.env.heirloom
@@ -1,10 +1,12 @@
-# last modified 2014-10-22
+# last modified 2014-12-13
 # source only if using Heirloom troff and friends
 
-export PATH=.:$HOME/heirloom/ucb:$PATH
+export PATH=.:~/heirloom/ucb:$PATH
 
-export MANPATH=$HOME/heirloom/share/man:$MANPATH
+export MANPATH=~/heirloom/share/heirloom-doctools/man:$MANPATH
 
-export TROFFONTS=~/public_html/groffonts/devps
+export TROFFONTS=~/.fonts
 
-export TROFFMACS=~/troffmacs/
+# TROFFMACS is simply a file prefix, not a list of directories
+#export TROFFMACS=~/troffmacs:~/heirloom/ucblib/doctools/tmac
+export TROFFMACS=~/heirloom/ucblib/doctools/tmac/
