--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2014-11-03
+# last change 2014-12-15
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -9,7 +9,7 @@ then export MANPATH=$MANPATH:/usr/local/share/man/5man
 fi
 export EDITOR=vi
 
-export MANPATH=~/man:~/src/plt/man:/usr/local/man:/usr/local/lib/erlang/man:
+export MANPATH=/usr/local/share/man:/usr/local/man:
 
 #groff
 
