--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-01-23
+# last change 2015-01-31
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -51,3 +51,5 @@ export LYNX_LSS=~/.lynx.lss
 export NODE_PATH=/usr/local/lib/node_modules
 
 export PYRETHOME=~/public_html/pyret-lang
+
+export JULIA_LOAD_PATH=~/julia
