--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-01-31
+# last change 2015-02-13
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -17,7 +17,7 @@ export GROFF_FONT_PATH=~/public_html/groffonts
 
 export GROFF_ENCODING=utf8
 
-#export GROFF_TMAC_PATH=~/src/txt2page/tmac:
+export GROFF_TMAC_PATH=~/tmac:
 
 export GROFF_FONT_FAM=baskervald
 #export GROFF_FONT_BOLD=chunkfive
