--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-02-13
+# last change 2015-03-01
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -13,11 +13,11 @@ export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
 
 #groff
 
-export GROFF_FONT_PATH=~/public_html/groffonts
+export GROFF_FONT_PATH=~/groffinputs/font
 
 export GROFF_ENCODING=utf8
 
-export GROFF_TMAC_PATH=~/tmac:
+export GROFF_TMAC_PATH=~/groffinputs/tmac:
 
 export GROFF_FONT_FAM=baskervald
 #export GROFF_FONT_BOLD=chunkfive
