--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-03-01
+# last change 2015-04-07
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -19,10 +19,10 @@ export GROFF_ENCODING=utf8
 
 export GROFF_TMAC_PATH=~/groffinputs/tmac:
 
-export GROFF_FONT_FAM=baskervald
+#export GROFF_FONT_FAM=baskervald
 #export GROFF_FONT_BOLD=chunkfive
-export GROFF_FONT_BOLD=ubuntuB
-export GROFF_FONT_MONO=ubuntumonoR
+#export GROFF_FONT_BOLD=ubuntuB
+#export GROFF_FONT_MONO=ubuntumonoR
 
 #export GROFF_PREFIX=/usr/local
 #export GROFF_FONT_FAM=ubuntu
