--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-04-07
+# last change 2015-04-27
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -53,3 +53,7 @@ export NODE_PATH=/usr/local/lib/node_modules
 export PYRETHOME=~/public_html/pyret-lang
 
 export JULIA_LOAD_PATH=~/julia
+
+#for WeScheme
+
+export DEFAULT_ENCODING=UTF-8
