--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
-set-option -g prefix C-a
+set -g prefix C-a
+# set -s escape-time 5
 unbind-key C-b
 bind-key C-a send-prefix
+
+set -g default-terminal "screen-256color"
+
+set -g status-bg black
+set -g status-fg white
