--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set -g prefix C-a
-# set -s escape-time 5
+
+# for nvim's escape problem
+set -s escape-time 0
+
 unbind-key C-b
 bind-key C-a send-prefix
 
