--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-04-27
+# last change 2015-05-30
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -32,7 +32,7 @@ export GROFF_TMAC_PATH=~/groffinputs/tmac:
 
 #export PATH=/usr/local/ucb:$PATH
 
-export CCL_DEFAULT_DIRECTORY=$HOME/src/linuxx86/ccl
+export CCL_DEFAULT_DIRECTORY=$HOME/src/ccl
 
 export INFOPATH=/usr/local/share/info:
 
