--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2015-05-30
+# last change 2015-06-02
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -54,6 +54,8 @@ export PYRETHOME=~/public_html/pyret-lang
 
 export JULIA_LOAD_PATH=~/julia
 
-#for WeScheme
+#for WeScheme ?
 
 export DEFAULT_ENCODING=UTF-8
+
+export CLUB3DIR=$HOME/src/club3/lisp
