--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,22 @@
 *Z*
 *lisp*
 .netrwhist*
-bin/[^abgilmopstuvxy]*
+bin/[^abegilmopstuvwxy]*
 bin/a[^d]*
+bin/e[^r]*
 bin/g[^i]*
 bin/i[^c]*
 bin/l[^il]*
 bin/m[^ae]*
 bin/o[^fp]*
 bin/p[^br]*
-bin/s[^j]*
+bin/s[^jk]*
 bin/t[^ae]*
 bin/ta[^r]*
 bin/tex[^d]*
 bin/u[^t]*
 bin/v[^iu]*
+bin/w[^e]*
 dump.rdb
 nvim/pack
 vimgists/
