--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2018-05-17
+# last change 2018-08-11
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -116,7 +116,7 @@ export PROMPT_DIRTRIM=5
 #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
 export BASH_ENV=~/.bash_noninteractive
 
-#export VIMRUNTIME=/dev/null
+export VIMRUNTIME=/usr/share/nvim/runtime
 
 export QT_IM_MODULE="uim"
 export GTK_IM_MODULE="uim"
