--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2018-08-11
+# last change 2018-09-07
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -126,3 +126,5 @@ export LISP=ecl
 export GUILE_WARN_DEPRECATED=detailed
 
 export REPLYTO=ds26gte@gmail.com
+
+export WORD_COUNT_FORMAT=minute
