--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2018-09-07
+# last change 2018-09-13
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -93,8 +93,6 @@ export NODE_PATH=/usr/local/lib/node_modules
 export PYRETHOME=~/public_html/pyret-lang
 #export PYRETHOME=~/public_html/ds26gte/pyret-lang
 
-export JULIA_LOAD_PATH=~/julia
-
 #for WeScheme ?
 
 export DEFAULT_ENCODING=UTF-8
@@ -116,7 +114,7 @@ export PROMPT_DIRTRIM=5
 #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
 export BASH_ENV=~/.bash_noninteractive
 
-export VIMRUNTIME=/usr/share/nvim/runtime
+#export VIMRUNTIME=/usr/share/nvim/runtime
 
 export QT_IM_MODULE="uim"
 export GTK_IM_MODULE="uim"
@@ -128,3 +126,5 @@ export GUILE_WARN_DEPRECATED=detailed
 export REPLYTO=ds26gte@gmail.com
 
 export WORD_COUNT_FORMAT=minute
+
+export EXINIT='sil! syn off'
