--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2018-09-18
+# last change 2018-10-25
 
 #if ! $(echo $PATH|grep texlive >/dev/null)
 #then export PATH=.:$PATH:/home/ds26gte/src/plt-5.0.1/bin:/usr/local/texlive/2011/bin/x86_64-linux
@@ -7,6 +7,8 @@
 #if ! $(echo $MANPATH|grep 5man >/dev/null)
 #then export MANPATH=$MANPATH:/usr/local/share/man/5man
 #fi
+
+export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
 
 export PATH=.:$PATH
 
