--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-02-17
+# last change 2019-02-19
 
 export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
 
@@ -27,7 +27,7 @@ export HISTFILESIZE=100000
 
 export INFOPATH=/usr/local/share/info:
 
-export BC_ENV_ARGS=-ql
+export BC_ENV_ARGS="-ql $HOME/.bcrc"
 
 export LYNX_LSS=~/.lynx.lss
 
