--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2018-08-05
+# last modified 2019-02-24
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -20,11 +20,8 @@ set -g mode-style 'bg=colour24'
 
 set -g clock-mode-style 12
 
-#set -g status-bg white
-#set -g status-fg black
-
 set -g status-bg black
-set -g status-fg white
+set -g status-fg colour247
 
 set -g history-limit 65536
 
