--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
-# last change 2019-02-19
+# last change 2019-06-10
 
 export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
 
 export PATH=.:$PATH
 
 export EDITOR=vi
+
+export PROMPT_DIRTRIM=5
 
 export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
 
@@ -28,6 +30,8 @@ export HISTFILESIZE=100000
 export INFOPATH=/usr/local/share/info:
 
 export BC_ENV_ARGS="-ql $HOME/.bcrc"
+
+export EXINIT='sil! syn off'
 
 export LYNX_LSS=~/.lynx.lss
 
