--- a/.env
+++ b/.env
@@ -1,16 +1,52 @@
-# last change 2019-06-10
+# last change 2019-09-12
 
-export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
+if test -d /home/ds26gte; then
 
-export PATH=.:$PATH
+  export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
 
-export EDITOR=vi
+  export PATH=.:$PATH
 
-export PROMPT_DIRTRIM=5
+  export EDITOR=vi
 
-export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
+  export PROMPT_DIRTRIM=5
 
-export MANWIDTH=80
+  export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
+
+  export MANWIDTH=80
+
+  #history
+
+  export HISTSIZE=500000
+  export HISTFILESIZE=100000
+
+  export FZF_DEFAULT_COMMAND='find -L'
+
+  export INFOPATH=/usr/local/share/info:
+
+  export BC_ENV_ARGS="-ql $HOME/.bcrc"
+
+  export EXINIT='sil! syn off'
+
+  export LYNX_LSS=~/.lynx.lss
+
+  export NODE_PATH=/usr/local/lib/node_modules
+
+  export PYRETHOME=~/public_html/pyret-lang
+
+  #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
+  export BASH_ENV=~/.bash_noninteractive
+
+fi
+
+if test -d /gpfs; then
+
+  export LESS=eFRX
+
+  export VICOLOR=apprentice
+
+  export VISUAL=vi
+
+fi
 
 #man colors
 
@@ -21,23 +57,3 @@ export LESS_TERMCAP_us=$'\E[01;34m'
 export LESS_TERMCAP_me=$'\E[0m'
 export LESS_TERMCAP_se=$'\E[0m'
 export LESS_TERMCAP_ue=$'\E[0m'
-
-#history
-
-export HISTSIZE=500000
-export HISTFILESIZE=100000
-
-export INFOPATH=/usr/local/share/info:
-
-export BC_ENV_ARGS="-ql $HOME/.bcrc"
-
-export EXINIT='sil! syn off'
-
-export LYNX_LSS=~/.lynx.lss
-
-export NODE_PATH=/usr/local/lib/node_modules
-
-export PYRETHOME=~/public_html/pyret-lang
-
-#whenever bash is called noninteractively (e.g., inside vim), this file is sourced
-export BASH_ENV=~/.bash_noninteractive
