--- a/.env
+++ b/.env
@@ -1,12 +1,10 @@
-# last change 2019-09-12
+# last change 2019-09-13
 
 if test -d /home/ds26gte; then
 
   export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
 
   export PATH=.:$PATH
-
-  export EDITOR=vi
 
   export PROMPT_DIRTRIM=5
 
@@ -42,10 +40,9 @@ if test -d /gpfs; then
 
   export LESS=eFRX
 
-  export VICOLOR=apprentice
+  export EDITOR=vi
 
-  export VISUAL=vi
-
+  unset -f cp ls mv rm
 fi
 
 #man colors
