--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-09-17
+# last change 2019-09-21
 
 if test -d /home/ds26gte; then
 
@@ -27,7 +27,7 @@ if test -d /home/ds26gte; then
   export PYRETHOME=~/public_html/pyret-lang
 
   #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
-  export BASH_ENV=~/.bash_noninteractive
+  export BASH_ENV=~/src/dotfiles/.bash_noninteractive
 
 fi
 
@@ -44,7 +44,7 @@ export PROMPT_DIRTRIM=5
 
 export PATH=.:$PATH
 
-export BC_ENV_ARGS="-ql $HOME/.bcrc"
+export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
 
 #man colors
 
