--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-# last change 2019-09-21
+# last change 2019-09-24
 
 if test -d /home/ds26gte; then
 
   export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
-
 
   export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
 
@@ -26,9 +25,6 @@ if test -d /home/ds26gte; then
 
   export PYRETHOME=~/public_html/pyret-lang
 
-  #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
-  export BASH_ENV=~/src/dotfiles/.bash_noninteractive
-
 fi
 
 if test -d /gpfs; then
@@ -40,11 +36,23 @@ if test -d /gpfs; then
   unset -f cp ls mv rm
 fi
 
+#whenever bash is called noninteractively (e.g., inside vim), this file is sourced
+
+export BASH_ENV=~/src/dotfiles/.bash_noninteractive
+
 export PROMPT_DIRTRIM=5
 
 export PATH=.:$PATH
 
+export VICOLOR=bubblegum-256-dark
+
 export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
+
+#groff
+
+export GROFF_ENCODING=utf8
+export GROFF_FONT_PATH=~/groffinputs/font
+export GROFF_TMAC_PATH=.:~/src/dotfiles/tmac:~/groffinputs/tmac:
 
 #man colors
 
