--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ bin/g[^i]*
 bin/i[^c]*
 bin/l[^ily]*
 bin/m[^ae]*
-bin/o[^fp]*
+bin/o[^fpt]*
 bin/p[^br]*
 bin/s[^ejk]*
-bin/t[^aer]*
+bin/t[^aert]*
 bin/ta[^r]*
 bin/tex[^d]*
 bin/u[^t]*
