--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-09-24
+# last change 2019-09-27
 
 if test -d /home/ds26gte; then
 
@@ -52,7 +52,7 @@ export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
 
 export GROFF_ENCODING=utf8
 export GROFF_FONT_PATH=~/groffinputs/font
-export GROFF_TMAC_PATH=.:~/src/dotfiles/tmac:~/groffinputs/tmac:
+export GROFF_TMAC_PATH=.:~/groffinputs/tmac:
 
 #man colors
 
