--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-02-24
+# last modified 2019-09-27
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -29,10 +29,12 @@ setw -g mode-keys vi
 
 set -g mouse on
 
-#bind -T copy-mode-vi y send-keys -X copy-selection
+set -g renumber-windows on
+
+set -g display-panes-time 4000
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi y send-keys -X copy-selection
 
 bind k select-pane -U
 bind l select-pane -R
