--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-09-27
+# last change 2019-10-06
 
 if test -d /home/ds26gte; then
 
@@ -32,6 +32,12 @@ if test -d /gpfs; then
   export EDITOR=vi
 
   unset -f cp ls mv rm
+fi
+
+if test -d /sdcard; then
+
+  export PATH=~/bin:$PATH
+
 fi
 
 #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
