--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-10-06
+# last change 2019-10-07
 
 if test -d /home/ds26gte; then
 
@@ -35,6 +35,8 @@ if test -d /gpfs; then
 fi
 
 if test -d /sdcard; then
+
+  export PS1="\w\$ "
 
   export PATH=~/bin:$PATH
 
