--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-09-27
+# last modified 2019-10-19
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -14,8 +14,10 @@ set -g default-terminal "tmux-256color"
 #set -g default-terminal "screen-256color"
 #set -g default-terminal "xterm-256color"
 
-#set -g window-style 'fg=colour232,bg=colour187'
+set -g window-style 'fg=colour250,bg=colour235'
+
 #set -g window-active-style 'fg=colour232,bg=colour187'
+
 set -g mode-style 'bg=colour24'
 
 set -g clock-mode-style 12
