--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 # last change 2019-11-03
+# Dorai Sitaram
+
+if test "$ENV_ALREADY_LOADED"; then
+  return
+else
+  export ENV_ALREADY_LOADED=1
+fi
 
 if test -d /home/ds26gte; then
 
@@ -20,7 +27,6 @@ if test -d /home/ds26gte; then
   export NODE_PATH=/usr/local/lib/node_modules
 
   export PYRETHOME=~/public_html/pyret-lang
-
 fi
 
 if test -d /gpfs; then
@@ -37,7 +43,6 @@ if test -d /sdcard; then
   export PS1="\w\$ "
 
   export PATH=~/bin:$PATH
-
 fi
 
 #whenever bash is called noninteractively (e.g., inside vim), this file is sourced
