--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-11-03
+# last change 2019-11-09
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -54,6 +54,9 @@ export PROMPT_DIRTRIM=5
 export PATH=.:$PATH
 
 export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
+
+export LYNX_CFG=~/src/dotfiles/.lynx.cfg
+export LYNX_LSS=~/.lynx.lss
 
 #groff
 
