--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-11-09
+# last change 2019-11-13
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -58,13 +58,18 @@ export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
 export LYNX_CFG=~/src/dotfiles/.lynx.cfg
 export LYNX_LSS=~/.lynx.lss
 
-#groff
+# groff
 
 export GROFF_ENCODING=utf8
 export GROFF_FONT_PATH=~/groffinputs/font
 export GROFF_TMAC_PATH=.:~/groffinputs/tmac:
 
-#man colors
+# customization file for scmindent.lua
+
+export NVIM_LISPWORDS=$HOME/src/neoscmindent/.lispwords.lua
+export LISPWORDS=$HOME/src/scmindent/.lispwords.lua
+
+# man colors
 
 export LESS_TERMCAP_mb=$'\E[01;31m'
 export LESS_TERMCAP_md=$'\E[01;35m'
