--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-11-13
+# last change 2019-11-15
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -10,6 +10,9 @@ fi
 if test -d /home/ds26gte; then
 
   export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
+
+  # being in .profile not enough?
+  export PATH=$HOME/bin:$PATH
 
   export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
 
