--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-10-28
+# last modified 2019-11-15
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -21,6 +21,9 @@ set -g history-limit 65536
 setw -g mode-keys vi
 
 set -g mouse on
+
+set -g base-index 1
+set -g pane-base-index 1
 
 set -g renumber-windows on
 
