--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-11-15
+# last change 2019-11-25
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -66,6 +66,11 @@ export LYNX_LSS=~/.lynx.lss
 export GROFF_ENCODING=utf8
 export GROFF_FONT_PATH=~/groffinputs/font
 export GROFF_TMAC_PATH=.:~/groffinputs/tmac:
+
+# TeX
+
+export BIBINPUTS=.:~/texmf/tex:
+export TEXINPUTS=.:~/texmf/tex//:
 
 # man colors
 
