--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-11-25
+# last change 2019-12-10
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -30,6 +30,8 @@ if test -d /home/ds26gte; then
   export NODE_PATH=/usr/local/lib/node_modules
 
   export PYRETHOME=~/public_html/pyret-lang
+
+  export BUILD_PATHWAY_DEBUG_MODE=true
 fi
 
 if test -d /gpfs; then
@@ -48,7 +50,7 @@ if test -d /sdcard; then
   export PATH=~/bin:$PATH
 fi
 
-#whenever bash is called noninteractively (e.g., inside vim), this file is sourced
+# whenever bash is called noninteractively (e.g. inside vim), this file is sourced
 
 export BASH_ENV=~/src/dotfiles/.bash_noninteractive
 
