--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-11-15
+# last modified 2019-12-09
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -15,6 +15,8 @@ set -g clock-mode-style 12
 
 set -g status-bg black
 set -g status-fg colour247
+
+#set -g default-shell /bin/bash
 
 set -g history-limit 65536
 
