--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-12-10
+# last change 2019-12-19
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -31,7 +31,6 @@ if test -d /home/ds26gte; then
 
   export PYRETHOME=~/public_html/pyret-lang
 
-  export BUILD_PATHWAY_DEBUG_MODE=true
 fi
 
 if test -d /gpfs; then
@@ -57,6 +56,8 @@ export BASH_ENV=~/src/dotfiles/.bash_noninteractive
 export PROMPT_DIRTRIM=5
 
 export PATH=.:$PATH
+
+export EXINIT="sil! syn off"
 
 export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
 
