--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2019-12-19
+# last change 2019-12-27
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -57,7 +57,7 @@ export PROMPT_DIRTRIM=5
 
 export PATH=.:$PATH
 
-export EXINIT="sil! syn off"
+#export EXINIT="sil! syn off"
 
 export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
 
