--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-12-09
+# last modified 2019-12-24
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -22,7 +22,8 @@ set -g history-limit 65536
 
 setw -g mode-keys vi
 
-set -g mouse on
+# history scrolling too eagerly triggered
+set -g mouse off
 
 set -g base-index 1
 set -g pane-base-index 1
