--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-01-12
+# last change 2020-01-31
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -84,3 +84,5 @@ export LESS_TERMCAP_us=$'\E[01;34m'
 export LESS_TERMCAP_me=$'\E[0m'
 export LESS_TERMCAP_se=$'\E[0m'
 export LESS_TERMCAP_ue=$'\E[0m'
+
+export CHROME_BIN=/usr/bin/chromium-browser
