--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-# last change 2020-01-31
+# last change 2020-03-13
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
+  export ENV_ALREADY_LOADED=$((ENV_ALREADY_LOADED + 1))
   return
 else
   export ENV_ALREADY_LOADED=1
@@ -49,40 +50,4 @@ if test -d /sdcard; then
   export PATH=~/bin:$PATH
 fi
 
-# whenever bash is called noninteractively (e.g. inside vim), this file is sourced
-
-export BASH_ENV=~/src/dotfiles/.bash_noninteractive
-
-export PROMPT_DIRTRIM=5
-
 export PATH=.:$PATH
-
-export EXINIT="sil! syn off"
-
-export BC_ENV_ARGS="-ql $HOME/src/dotfiles/.bcrc"
-
-export LYNX_CFG=~/src/dotfiles/.lynx.cfg
-export LYNX_LSS=~/.lynx.lss
-
-# groff
-
-export GROFF_ENCODING=utf8
-export GROFF_FONT_PATH=~/groffinputs/font
-export GROFF_TMAC_PATH=.:~/groffinputs/tmac:
-
-# TeX
-
-export BIBINPUTS=.:~/texmf/tex:
-export TEXINPUTS=.:~/texmf/tex//:
-
-# man colors
-
-export LESS_TERMCAP_mb=$'\E[01;31m'
-export LESS_TERMCAP_md=$'\E[01;35m'
-export LESS_TERMCAP_so=$'\E[01;44;33m'
-export LESS_TERMCAP_us=$'\E[01;34m'
-export LESS_TERMCAP_me=$'\E[0m'
-export LESS_TERMCAP_se=$'\E[0m'
-export LESS_TERMCAP_ue=$'\E[0m'
-
-export CHROME_BIN=/usr/bin/chromium-browser
