--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-03-13
+# last change 2020-03-26
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -10,7 +10,7 @@ fi
 
 if test -d /home/ds26gte; then
 
-  export PATH=/home/ds26gte/.nvm/versions/node/v11.0.0/bin:$PATH
+  export PATH=$HOME/.nvm/versions/node/v11.0.0/bin:$HOME/.local/bin:$PATH
 
   # being in .profile not enough?
   export PATH=$HOME/bin:$PATH
