--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-03-26
+# last change 2020-04-06
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -50,4 +50,4 @@ if test -d /sdcard; then
   export PATH=~/bin:$PATH
 fi
 
-export PATH=.:$PATH
+export PATH=.:$HOME/local/bin:$PATH
