--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# last modified 2019-12-24
+# last modified 2020-05-13
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -16,8 +16,6 @@ set -g clock-mode-style 12
 set -g status-bg black
 set -g status-fg colour247
 
-#set -g default-shell /bin/bash
-
 set -g history-limit 65536
 
 setw -g mode-keys vi
@@ -33,7 +31,8 @@ set -g renumber-windows on
 set -g display-panes-time 4000
 
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
 
 bind k select-pane -U
 bind l select-pane -R
