--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-05-09
+# last change 2020-05-26
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -10,7 +10,8 @@ fi
 
 if test -d /home/ds26gte; then
 
-  export PATH=$HOME/.nvm/versions/node/v11.10.1/bin:$HOME/.local/bin:$PATH
+  #export PATH=$HOME/.nvm/versions/node/v13.12.0/bin:$HOME/.local/bin:$PATH
+  export PATH=$HOME/.local/bin:$PATH
 
   # being in .profile not enough?
   export PATH=$HOME/bin:$PATH
