--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-05-26
+# last change 2020-07-16
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -10,8 +10,8 @@ fi
 
 if test -d /home/ds26gte; then
 
-  #export PATH=$HOME/.nvm/versions/node/v13.12.0/bin:$HOME/.local/bin:$PATH
   export PATH=$HOME/.local/bin:$PATH
+  export PATH=$HOME/.nvm/versions/node/v14.5.0/bin:$PATH
 
   # being in .profile not enough?
   export PATH=$HOME/bin:$PATH
