--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# last change 2020-10-13
+# last change 2020-11-18
 # Dorai Sitaram
 
 if test "$ENV_ALREADY_LOADED"; then
@@ -10,11 +10,9 @@ fi
 
 if test -d /home/ds26gte; then
 
+  export PATH=$HOME/src/mpca/bin:$PATH
   export PATH=$HOME/.local/bin:$PATH
   export PATH=$HOME/.nvm/versions/node/v14.6.0/bin:$PATH
-
-  # being in .profile not enough?
-  export PATH=$HOME/bin:$PATH
 
   export MANPATH=~/man:/usr/local/share/man:/usr/local/man:
 
