--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
-# last modified 2021-01-25
+# last modified 2021-01-26
+
+setw -g mode-keys vi
 
 # escape in nvim is ergonomic only with this
 set -s escape-time 0
@@ -6,8 +8,6 @@ set -s escape-time 0
 set -g repeat-time 1000
 
 set -g default-terminal "tmux-256color"
-
-setw -g mode-keys vi
 
 set -g history-limit 65536
 
@@ -20,4 +20,4 @@ set -g display-panes-time 4000
 
 bind -T copy-mode-vi v send-keys -X begin-selection
 
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -sel clip -i'
