--- a/.keynavrc
+++ b/.keynavrc
@@ -1,10 +1,14 @@
-# last modified 2018-05-22
+# last modified 2021-06-27
 p warp,click 3,end
 o warp,doubleclick 1,end
 m warp, sh "xdotool mousedown 1", sleep 5, sh "xdotool mouseup 1",end
 # drag doesn't seem to work at all
 #q drag 1
 q warp, drag 1
-#1 warp, click 1
-#2 warp, click 2
-#3 warp, click 3
+1 warp, click 1
+2 warp, click 2
+3 warp, click 3
+4 click 4
+5 click 5
+6 click 6
+7 click 7
